Complete basic features

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#d34f3b</color>
     <color name="colorPrimaryDark">#d34f3b</color>
-    <color name="colorAccent">#ffe240</color>
+    <color name="colorAccent">#d34f3b</color>
     <color name="backgroundGrey">#ebebeb</color>
 </resources>
