--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:id="@+id/mockup_container"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:animateLayoutChanges="true"
         app:layout_constraintBottom_toTopOf="@id/tools_container"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -19,25 +20,52 @@
 
         <com.juniperphoton.projecto.drawing.MockupView
             android:id="@+id/mockup_view"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+        <ImageView
+            android:id="@+id/add_hint"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_add"/>
     </FrameLayout>
 
-    <FrameLayout
+    <LinearLayout
         android:id="@+id/tools_container"
         android:layout_width="0dp"
-        android:layout_height="60dp"
+        android:layout_height="@dimen/tool_container_height"
         android:background="@android:color/white"
         android:elevation="8dp"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent">
 
-    </FrameLayout>
+        <ImageView
+            android:id="@+id/pick_button"
+            style="@style/ToolsStyle"
+            android:src="@drawable/layer_list_pick_from_screenshot"
+            android:tooltipText="Pick background from screenshot"/>
+
+        <ImageView
+            android:id="@+id/shadow_button"
+            style="@style/ToolsStyle"
+            android:src="@drawable/layer_list_shadow"
+            android:tooltipText="Shadow"/>
+
+        <ImageView
+            android:id="@+id/frame_button"
+            style="@style/ToolsStyle"
+            android:src="@drawable/layer_list_frame"
+            android:tooltipText="Shadow"/>
+
+        <ImageView
+            android:id="@+id/more_button"
+            style="@style/ToolsStyle"
+            android:src="@drawable/ic_more"
+            android:tooltipText="More"/>
+    </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/output_fab"
@@ -45,7 +73,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:layout_marginTop="30dp"
-        android:src="@drawable/ic_done_black_24dp"
+        android:src="@drawable/ic_done"
         app:backgroundTint="@color/colorPrimary"
         app:elevation="9dp"
         app:fabSize="normal"
