--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="tool_container_height">60dp</dimen>
+    <dimen name="round_radius_large">20dp</dimen>
 </resources>
